[gd_scene load_steps=8 format=2]

[ext_resource path="res://Misc/Particles/water.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Magic/Magic_throwable.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.950311, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=2]
trail_divisor = 6
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
angular_velocity = 40.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -30.0
scale = 0.5
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[node name="Magic" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 0.959999 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 5
lifetime = 3.0
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Magic" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magic"]
shape = SubResource( 3 )
one_way_collision_margin = 112.8

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Magic" to="." method="_on_Area2D_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
